--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -8,7 +8,7 @@
 <body>
 
 
-  
+
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -59,6 +59,26 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+
+  const playAudio = (e) =>{
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if(!audio) return;
+
+    key.classList.add("playing");
+    audio.currentTime = 0;
+    audio.play();
+  }
+
+  const removeTransition = (e) =>{
+    e.target.classList.remove("playing");
+  }
+
+  const keys = Array.from(document.querySelectorAll('.key'));
+  keys.forEach(key => {
+    key.addEventListener('transitionend', removeTransition);
+  });
+  document.addEventListener("keydown", playAudio);
 
 </script>
 
