--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,37 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: right;
     }
 
   </style>
 
   <script>
+    const hourHand = document.querySelector('.hour-hand');
+    const minHand = document.querySelector('.min-hand');
+    const secHand = document.querySelector('.second-hand');
 
+    const setTime = () =>{
+      const date = new Date();
+      const seconds = date.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      const mins = date.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hour = date.getHours();
+      const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+      
+      
+    }
+
+
+    setInterval(setTime, 1000);
+
+    setTime();
 
   </script>
 </body>
